--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,29 @@
 cmake_minimum_required(VERSION 3.14)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
 project(delegate)
 
 add_library(${PROJECT_NAME} INTERFACE)
 
 target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_17)
 
-# Export include directories
-target_include_directories(${PROJECT_NAME} INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<INSTALL_INTERFACE:include>
+target_include_directories(delegate INTERFACE
+	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
+	$<INSTALL_INTERFACE:include>
+)
+
+install(FILES ${PROJECT_SOURCE_DIR}/delegate.hpp DESTINATION include)
+
+install(TARGETS delegate EXPORT delegateTargets)
+
+install(EXPORT delegateTargets
+	FILE delegateConfig.cmake
+	DESTINATION lib/cmake/delegate
 )
 
 enable_testing()
 
-# Find GoogleTest
 find_package(GTest REQUIRED)
 
-# Add your test executable
 add_executable(tests tests.cpp)
 target_link_libraries(tests PRIVATE GTest::GTest GTest::Main)
 
