--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ enable_testing()
 
 find_package(GTest REQUIRED)
 
-add_executable(tests tests.cpp)
-target_link_libraries(tests PRIVATE GTest::GTest GTest::Main)
+add_executable(${PROJECT_NAME}-tests tests.cpp)
+target_link_libraries(${PROJECT_NAME}-tests PRIVATE GTest::GTest GTest::Main)
 
 add_test(NAME RunTests COMMAND tests)
